WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71958
CSP report-only mode doesn't work from an HTTP header
https://bugs.webkit.org/show_bug.cgi?id=71958
Summary
CSP report-only mode doesn't work from an HTTP header
WebKit Review Bot
Reported
2011-11-09 14:27:24 PST
CSP report-only mode doesn't work from an HTTP header Requested by abarth on #webkit.
Attachments
Patch
(3.78 KB, patch)
2011-11-16 22:16 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-11-16 22:16:13 PST
Created
attachment 115523
[details]
Patch
WebKit Review Bot
Comment 2
2011-11-17 00:25:57 PST
Comment on
attachment 115523
[details]
Patch Clearing flags on attachment: 115523 Committed
r100574
: <
http://trac.webkit.org/changeset/100574
>
WebKit Review Bot
Comment 3
2011-11-17 00:26:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug